[package]
name = "regist"
version = "0.1.0"
authors = ["Karel De Witte <2000outoftime@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
webscreenshot = "0.2.2"
image = "0.23.14"
urlencoding = "1.1.1"
serde = "1.0.23"
sled = "0.34.6"
scraper = { version = "0.12.0" }
url = "2.2.1"
reqwest = {version="0.11.1",features = ["blocking"]}
anyhow = "1.0.38"
rake = "0.3.3"
rust-bert = "0.14.0"
bincode = "1.3.2"